--- a/case-study-mobile.html
+++ b/case-study-mobile.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Our Study Case - SaaS</title>
+    <title>Our Study Case - Mobile</title>
     <!-- FAV -->
     <link rel="icon" type="image/png" href="./favicon.png" />
 
@@ -47,46 +47,16 @@
 
         <div class="container">
                 <img src="./img/circle.png" alt="" class="circle__right">
-            <div class="banner__top row mt-5" style="min-height: auto;">
+            <div class="banner__top row mt-5" style="min-height: 200px;">
                 <div class="banner__detail col-md-12">
-                    <h1 class="text-white typing__animate">Our Study Case - SaaS
+                    <h1 class="text-white typing__animate">Our Study Case - Mobile
                     </h1>
-                    <p class="mb-5 text-white">
-                        DailiTech, we help customer design and configure infrastructure along with development pipeline,
-                        so customer’s services achieve high SLA. Beside the infrastructure, practical development
-                        pipeline is also our expertise, so we can help their development process to be more agile as
-                        well as less development lifecycle. Doing SaaS needs to handle cost structure well because the
-                        cost structure leads to customer’s offering that can set as a packages of features and
-                        functions. We implement security in every part and also work with customer that security is job
-                        zero in both infrastructure and application. And finally, we guide customers how to handle
-                        support workflow and case management.
-                    </p>
                 </div>
             </div>
         </div>
     </div>
-    <div class="container">
-        <div class="row my-5">
-            <div class="col-md-6">
-                <p style="text-indent: 30px;">We have practices from consulting and implementation to customers in many
-                    use cases including migration, landing zone implementation, development pipeline implementation, and
-                    also big data implementation. Our experience in FSI is security-is-job-zero mindset and adopt the
-                    segregation of duty concept.</p>
-            </div>
-            <div class="col-md-6">
-                <p style="text-indent: 30px;">
-                    To transform the customer to adopt with cloud solution, we normally start with a team.Customer’s
-                    team needs to understand the concept of AWS, so when we move workloads fromon-premise or commodity
-                    cloud to AWS, they understand what we suggest and how we design thesolution. After migration is
-                    complete, we help customers to optimize and innovate theirbusiness with AWS advanced technology such
-                    as AI/ML.
-                </p>
-            </div>
-            
-        </div>
-    </div>
-    <img src="./img/curve.png" alt="curve" class="w-100 mb-5">
-    <div class="container">
+   
+    <div class="container mt-5">
             <img src="./img/hexagon.png" alt="" class="hex__topleft">
         <div class="card mt-3">
             <div class="card-body row">
@@ -106,7 +76,7 @@
                     </p>
                     <h5>
 
-                        <a href="https://blog.dailitech.com/saas-case-study-triple-e-eee-c94c39b70659" target="_blank" class="text__link font-weight-bold">
+                        <a href="https://blog.dailitech.com/case-study-whiteline-technology-e1d99ea2c3c6" target="_blank" class="text__link font-weight-bold">
                             Read More
                         </a>
                     </h5>
@@ -117,17 +87,17 @@
         <div class="card mt-3">
             <div class="card-body row">
                 <div class="col-md-3">
-                    <img src="./img/stamp.png" alt="" width="100%">
+                    <img src="./img/stamp2.png" alt="" width="100%">
                 </div>
                 <div class="col-md-9">
                     <h1>
                         Stamp
                     </h1>
                     <p>
-                            แสตมป์ (Stamp) เป็น Loyalty-Card-as-a-Service หรือระบบสะสมแต้มบนมือถือที่ต้องการให้ร้านค้าใช้้งาน โดยมีความคิดที่จะเปลี่ยนจากการสะสมแต้มด้วยบัตรกระดาษมาเป็นบัตรสะสมแต้มอิเล็กทรอนิกส์ ทำให้ร้านค้าสามารถนำข้อมูลมาวิเคราะห์พฤติกรรมของผู้ใช้งานได้ โดยเฉพาะในความเข้าใจทางด้าน RFM (Recency-Frequency-Monetary การใช้บริการครั้งล่าสุด ความถี่ และจำนวนเงิน) ทำให้เราสามารถแยก Segment ของลูกค้าคนสำคัญของเราได้ ซึ่งในปัจจุบันได้มี SLA ที่ 99.99%
+                            แสตมป์ (Stamp) เป็นระบบสะสมแต้มบนมือถือ ที่ต้องการให้ร้านค้าโดยมีความคิดที่จะเปลี่ยนจากการสะสมแต้มด้วยบัตรกระดาษมาเป็นบัตรสะสมแต้มอิเล็กทรอนิกส์ ทำให้ร้านค้าสามารถนำข้อมูลมาวิเคราะห์พฤติกรรมของผู้ใช้งานได้ โดยเฉพาะในความเข้าใจทางด้าน RFM (Recency-Frequency-Monetary การใช้บริการครั้งล่าสุด ความถี่ และจำนวนเงิน) ทำให้เราสามารถแยก Segment ของลูกค้าคนสำคัญของเราได้
                     </p>
                     <h5>
-                        <a href="https://blog.dailitech.com/saas-case-study-stamp-7aa818d2d8c9" target="_blank" class="text__link font-weight-bold">
+                        <a href="https://blog.dailitech.com/case-study-stamp-1f08fabe323c" target="_blank" class="text__link font-weight-bold">
                             Read More
                         </a>
                     </h5>
