--- a/index.html
+++ b/index.html
@@ -219,15 +219,16 @@
                     </div>
                     <div class="col-md-6 col-lg-3">
                         <div class="case__container  mt-3">
-                            <button class="btn " onclick="changePageTo('iaas')">
+                            <button class="btn ">
+                            <!-- <button class="btn " onclick="changePageTo('iaas')"> -->
                                 Our Study Case - IaaS
                             </button>
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-3">
                         <div class="case__container  mt-3">
-                            <button class="btn ">
-                                <!-- <button class="btn optimization" onclick="changePageTo('mobile')"> -->
+                            <!-- <button class="btn "> -->
+                            <button class="btn" onclick="changePageTo('case-study-mobile')">
                                 Our Study Case - Mobile
                             </button>
                         </div>
