--- a/index.html
+++ b/index.html
@@ -528,9 +528,7 @@
             <div class="row ">
                 <div class="col-md-12 col-lg-6 mb-4">
                     <h5>ADDRESS</h5>
-                    <p><i class="fas fa-map-marker-alt color__pink"></i> 71 Golden Town Building, #601, Phayathai Road,
-                        Ratchathewi, Bangkok 10400 Thailand</p>
-
+                    <p><i class="fas fa-map-marker-alt color__pink"></i> The Parq 6th Floor East Wing, 88 Ratchadaphisek Rd, Khlong Toei, Bangkok 10110, THAILAND</p>
                     <h5 class="mt-5">CONTACT</h5>
                     <p class="mb-0"><i class="far fa-envelope" style="color:#0091ff"></i> contact@dailitech.com</p>
                     <p class="mb-0"><i class="fas fa-phone-alt color__blue"></i> 061-569-5288</p>
