Add Window Workload

--- a/case-study-saas.html
+++ b/case-study-saas.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Our Study Case - SaaS</title>
+    <title>Our Case Study - SaaS</title>
     <!-- FAV -->
     <link rel="icon" type="image/png" href="./favicon.png" />
 
@@ -49,7 +49,7 @@
                 <img src="./img/circle.png" alt="" class="circle__right">
             <div class="banner__top row mt-5" style="min-height: auto;">
                 <div class="banner__detail col-md-12">
-                    <h1 class="text-white typing__animate">Our Study Case - SaaS
+                    <h1 class="text-white typing__animate">Our Case Study - SaaS
                     </h1>
                     <p class="mb-5 text-white">
                         DailiTech, we help customer design and configure infrastructure along with development pipeline,
@@ -125,8 +125,10 @@
                     </h1>
                     <p>
                             แสตมป์ (Stamp) เป็น Loyalty-Card-as-a-Service หรือระบบสะสมแต้มบนมือถือที่ต้องการให้ร้านค้าใช้้งาน โดยมีความคิดที่จะเปลี่ยนจากการสะสมแต้มด้วยบัตรกระดาษมาเป็นบัตรสะสมแต้มอิเล็กทรอนิกส์ ทำให้ร้านค้าสามารถนำข้อมูลมาวิเคราะห์พฤติกรรมของผู้ใช้งานได้ โดยเฉพาะในความเข้าใจทางด้าน RFM (Recency-Frequency-Monetary การใช้บริการครั้งล่าสุด ความถี่ และจำนวนเงิน) ทำให้เราสามารถแยก Segment ของลูกค้าคนสำคัญของเราได้ ซึ่งในปัจจุบันได้มี SLA ที่ 99.99%
+
                     </p>
                     <h5>
+
                         <a href="https://blog.dailitech.com/saas-case-study-stamp-7aa818d2d8c9" target="_blank" class="text__link font-weight-bold">
                             Read More
                         </a>
