--- a/case-study-window.html
+++ b/case-study-window.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Our Case Study - Mobile</title>
+    <title>Our Case Study - Window Workload to AWS</title>
     <!-- FAV -->
     <link rel="icon" type="image/png" href="./favicon.png" />
 
@@ -49,7 +49,7 @@
                 <img src="./img/circle.png" alt="" class="circle__right">
             <div class="banner__top row mt-5" style="min-height: 200px;">
                 <div class="banner__detail col-md-12">
-                    <h1 class="text-white typing__animate">Our Case Study - Mobile
+                    <h1 class="text-white typing__animate">Our Case Study - Window Workload to AWS
                     </h1>
                 </div>
             </div>
@@ -58,53 +58,26 @@
    
     <div class="container mt-5">
             <img src="./img/hexagon.png" alt="" class="hex__topleft">
-        <div class="card mt-3">
-            <div class="card-body row">
-                <div class="col-md-3">
-                    <img src="./img/triple-e.jpeg" alt="" width="100%">
-                </div>
-                <div class="col-md-9">
-                    <h1>
-                        Triple-E (EEE)
-                    </h1>
-                    <p>
-                        ไวท์ไลน์เทคโนโลยี (Whiteline Technology) เกิดจากความร่วมมือกันของบจก. ไวท์ไลน์กรุ๊ป และบจก.
-                        เดลิเทค ในการสร้างบริการทางด้านเทคโนโลยีด้านค้าปลีก (Retail) และร้านอาหาร (F&B) โดยสร้างเป็น
-                        Software-as-a-Service ที่ชื่อว่า EEE (อ่านว่า Triple-E) ซึ่งเป็น Platform
-                        แรกที่สร้างไว้ใช้สำหรับในการติดตามและตรวจสอบสื่อของคนติดตั้งที่สามารถการันตีเรื่อง Availability
-                        ที่มากกว่า 99.99%
-                    </p>
-                    <h5>
-
-                        <a href="https://blog.dailitech.com/case-study-whiteline-technology-e1d99ea2c3c6" target="_blank" class="text__link font-weight-bold">
-                            Read More
-                        </a>
-                    </h5>
-                        
-                </div>
-            </div>
-        </div>
-        <div class="card mt-3">
-            <div class="card-body row">
-                <div class="col-md-3">
-                    <img src="./img/stamp2.png" alt="" width="100%">
-                </div>
-                <div class="col-md-9">
-                    <h1>
-                        Stamp
-                    </h1>
-                    <p>
-                            แสตมป์ (Stamp) เป็นระบบสะสมแต้มบนมือถือ ที่ต้องการให้ร้านค้าโดยมีความคิดที่จะเปลี่ยนจากการสะสมแต้มด้วยบัตรกระดาษมาเป็นบัตรสะสมแต้มอิเล็กทรอนิกส์ ทำให้ร้านค้าสามารถนำข้อมูลมาวิเคราะห์พฤติกรรมของผู้ใช้งานได้ โดยเฉพาะในความเข้าใจทางด้าน RFM (Recency-Frequency-Monetary การใช้บริการครั้งล่าสุด ความถี่ และจำนวนเงิน) ทำให้เราสามารถแยก Segment ของลูกค้าคนสำคัญของเราได้
-                    </p>
-                    <h5>
-                        <a href="https://blog.dailitech.com/case-study-stamp-1f08fabe323c" target="_blank" class="text__link font-weight-bold">
-                            Read More
-                        </a>
-                    </h5>
-                        
-                </div>
-            </div>
-        </div>
+        <p>
+            For companies that rely on Windows Server but find it daunting to move those workloads to the cloud, there is no easier way to run Windows in the cloud than AWS. Many customers have chosen AWS over other cloud providers to unlock the Microsoft products they currently rely on, including Windows Server and SQL Server. By embracing AWS, they’ve achieved cost savings through forthright pricing options and expanded breadth and depth of capabilities. 
+            AWS is the most popular, secure, and reliable cloud for Windows Workload. 
+        </p>
+        <b>
+            Customers choose AWS as the cloud to run their Windows workload due to the various advantages that AWS can offers which are:
+        </b>
+        <ul>
+            <li>Broader and Deeper Functionality</li>
+            <li>Greater Reliability</li>
+            <li>More Security Capabilities</li>
+            <li>Faster Performance</li>
+            <li>Lower Costs</li>
+        </ul>
+        <p>
+            Dailitech offers end-to-end AWS solutions to increase agility, scalability, and security while substantially reducing costs and improving performance. Our team is specialized in migrating Microsoft Workloads, Modernizing the applications from legacy infrastructures, and innovating in AWS.
+        </p>
+        <i>
+            Contact us and let our team of experts help you build, deploy, scale, modernize and innovate Microsoft applications quickly and cost-effectively on AWS.
+        </i>
     </div>
     <div class="footer p-4" style="margin-top: 100px;">
         <div class="container">
