--- a/iaas.html
+++ b/iaas.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Our Study Case - IaaS</title>
+    <title>Our Case Study - IaaS</title>
     <!-- FAV -->
     <link rel="icon" type="image/png" href="./favicon.png" />
 
@@ -48,7 +48,7 @@
         <div class="container">
             <div class="banner__top row" style="min-height: 200px;">
                 <div class="banner__detail col-md-6">
-                    <h1 class="text-white typing__animate">Our Study Case - IaaS
+                    <h1 class="text-white typing__animate">Our Case Study - IaaS
                     </h1>
                 </div>
             </div>
