--- a/index.html
+++ b/index.html
@@ -207,37 +207,44 @@
             <div class="mt-5">
                 <div class="line" style="margin: 0 auto;"></div>
                 <h1 class="my-5 text-center">
-                    Our Study Case
+                    Our Case Study
                 </h1>
                 <div class="row">
-                    <div class="col-md-6 col-lg-3">
+                    <div class="col-md-6 col-lg">
                         <div class="case__container  mt-3">
-                            <button class="btn " onclick="changePageTo('case-study-saas')">
-                                Our Study Case - SaaS
+                            <button class="btn " onclick="changePageTo('case-study-window')">
+                                Our Case Study - Windows Workload to AWS
                             </button>
                         </div>
                     </div>
-                    <div class="col-md-6 col-lg-3">
+                    <div class="col-md-6 col-lg">
+                        <div class="case__container  mt-3">
+                            <button class="btn " onclick="changePageTo('case-study-saas')">
+                                Our Case Study - SaaS
+                            </button>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-lg">
                         <div class="case__container  mt-3">
                             <button class="btn ">
                             <!-- <button class="btn " onclick="changePageTo('iaas')"> -->
-                                Our Study Case - IaaS
+                                Our Case Study - IaaS
                             </button>
                         </div>
                     </div>
-                    <div class="col-md-6 col-lg-3">
+                    <div class="col-md-6 col-lg">
                         <div class="case__container  mt-3">
                             <!-- <button class="btn "> -->
                             <button class="btn" onclick="changePageTo('case-study-mobile')">
-                                Our Study Case - Mobile
+                                Our Case Study - Mobile
                             </button>
                         </div>
                     </div>
-                    <div class="col-md-6 col-lg-3">
+                    <div class="col-md-6 col-lg">
                         <div class="case__container mt-3">
                             <!-- <button class="btn innovation" onclick="changePageTo('bigdata')"> -->
                             <button class="btn ">
-                                Our Study Case - Big Data
+                                Our Case Study - Big Data
                             </button>
                         </div>
                     </div>
