ADD Workload to AWS

--- a/case-study-window.html
+++ b/case-study-window.html
@@ -65,12 +65,37 @@
         <b>
             Customers choose AWS as the cloud to run their Windows workload due to the various advantages that AWS can offers which are:
         </b>
-        <ul>
-            <li>Broader and Deeper Functionality</li>
-            <li>Greater Reliability</li>
-            <li>More Security Capabilities</li>
-            <li>Faster Performance</li>
-            <li>Lower Costs</li>
+        <ul class="workload-list">
+            <li>
+                <div>
+                    <img src="./img/wordload-logo-funcitonality.png" alt="">
+                    Broader and Deeper Functionality
+                </div>
+            </li>
+            <li>
+                <div>
+                    <img src="./img/wordload-logo-reliability.png" alt="">
+                    Greater Reliability
+                </div>
+            </li>
+            <li>
+                <div>
+                    <img src="./img/wordload-logo-security.png" alt="">
+                    More Security Capabilities
+                </div>
+            </li>
+            <li>
+                <div>
+                    <img src="./img/wordload-logo-faster.png" alt="">
+                    Faster Performance
+                </div>
+            </li>
+            <li>
+                <div>
+                    <img src="./img/wordload-logo-lowercost.png" alt="">
+                    Lower Costs
+                </div>
+            </li>
         </ul>
         <p>
             Dailitech offers end-to-end AWS solutions to increase agility, scalability, and security while substantially reducing costs and improving performance. Our team is specialized in migrating Microsoft Workloads, Modernizing the applications from legacy infrastructures, and innovating in AWS.
