Fix wording and add badge

--- a/index.html
+++ b/index.html
@@ -203,6 +203,37 @@
                     <img src="./img/circle.png" alt="" class="circle__left">
                 </div>
             </div>
+            <!-- Service / Solution -->
+            <div class="mt-5">
+                <div class="line" style="margin: 0 auto;"></div>
+                <h1 class="my-5 text-center">
+                    Solution
+                </h1>
+                <div class="row row-center">
+                    <!-- <div class="col-md-6 col-lg">
+                        
+                        <div class="case__container  mt-3">
+                            <button class="btn " onclick="changePageTo('solution-service-window')">
+                                Our Case Study - Windows Workload to AWS
+                            </button>
+                        </div>
+                    </div> -->
+                    <div class="col-md-6 col-lg-3 card">
+                        <h5>
+                            Windows Workload to AWS
+                        </h5>
+                        <p>
+                            For companies that rely on Windows Server but find it daunting to move those workloads to the cloud, there is no easier way to run Windows in the cloud than AWS.
+                        </p>
+
+                        <button class="btn btn-link" onclick="changePageTo('solution-window')">
+                            Read more <i class="fas fa-long-arrow-alt-right"></i>
+                        </button>
+                    </div>
+                </div>
+            </div>
+
+
             <!-- CASE Study -->
             <div class="mt-5">
                 <div class="line" style="margin: 0 auto;"></div>
@@ -210,13 +241,13 @@
                     Our Case Study
                 </h1>
                 <div class="row">
-                    <div class="col-md-6 col-lg">
+                    <!-- <div class="col-md-6 col-lg">
                         <div class="case__container  mt-3">
-                            <button class="btn " onclick="changePageTo('case-study-window')">
+                            <button class="btn " onclick="changePageTo('solution-service-window')">
                                 Our Case Study - Windows Workload to AWS
                             </button>
                         </div>
-                    </div>
+                    </div> -->
                     <div class="col-md-6 col-lg">
                         <div class="case__container  mt-3">
                             <button class="btn " onclick="changePageTo('case-study-saas')">
