--- a/solution-window.html
+++ b/solution-window.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Our Case Study - Window Workload to AWS</title>
+    <title>Solution - Window Workload to AWS</title>
     <!-- FAV -->
     <link rel="icon" type="image/png" href="./favicon.png" />
 
@@ -29,10 +29,10 @@
                     <img src="./img/dailitech-logo.png" width="70" height="70" class="d-inline-block align-top" alt="">
                     <p class="dailitech__wordmark">DAILITECH</p>
                 </a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+                <!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
                     aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
-                </button>
+                </button> -->
                 <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
                     <!-- <div class="navbar-nav">
                         <a class="nav-item nav-link scrollToDiv" href="#services">Services</a>
@@ -46,11 +46,12 @@
         </nav>
 
         <div class="container">
-                <img src="./img/circle.png" alt="" class="circle__right">
-            <div class="banner__top row mt-5" style="min-height: 200px;">
-                <div class="banner__detail col-md-12">
-                    <h1 class="text-white typing__animate">Our Case Study - Window Workload to AWS
+                <!-- <img src="./img/circle.png" alt="" class="circle__right"> -->
+            <div class="banner__top row " style="min-height: 200px;">
+                <div class="banner__detail col-md-12 d-flex justify-content-between mb-5 align-items-center">
+                    <h1 class="text-white typing__animate mt-5">Solution - Window Workload to AWS
                     </h1>
+                    <img src="./img/partner-logo.png" alt="" style="width: 120px;">
                 </div>
             </div>
         </div>
