--- a/index.html
+++ b/index.html
@@ -220,13 +220,13 @@
                     </div> -->
                     <div class="col-md-6 col-lg-3 card">
                         <h5>
-                            Windows Workload to AWS
+                            Windows Workload on AWS
                         </h5>
                         <p>
                             For companies that rely on Windows Server but find it daunting to move those workloads to the cloud, there is no easier way to run Windows in the cloud than AWS.
                         </p>
 
-                        <button class="btn btn-link" onclick="changePageTo('solution-window')">
+                        <button class="btn btn-link" onclick="changePageTo('solution-windows-on-AWS')">
                             Read more <i class="fas fa-long-arrow-alt-right"></i>
                         </button>
                     </div>
