--- a/solution-windows-on-AWS.html
+++ b/solution-windows-on-AWS.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Solution - Window Workload to AWS</title>
+    <title>Solution - Windows Workload on AWS</title>
     <!-- FAV -->
     <link rel="icon" type="image/png" href="./favicon.png" />
 
@@ -49,7 +49,7 @@
                 <!-- <img src="./img/circle.png" alt="" class="circle__right"> -->
             <div class="banner__top row " style="min-height: 200px;">
                 <div class="banner__detail col-md-12 d-flex justify-content-between mb-5 align-items-center">
-                    <h1 class="text-white typing__animate mt-5">Solution - Window Workload to AWS
+                    <h1 class="text-white typing__animate mt-5">Solution - Windows Workload on AWS
                     </h1>
                     <img src="./img/partner-logo.png" alt="" style="width: 120px;">
                 </div>
